#148 fix unselect z-index behind arrow

--- a/src/assets/stylesheets/sparnatural.scss
+++ b/src/assets/stylesheets/sparnatural.scss
@@ -248,7 +248,7 @@ body {
 			font-size: 18px;
 			box-sizing:border-box;
 			border-radius: 11px;
-			z-index: 1;
+			z-index: 2;
 			/*border: 2px solid #333;
 			
 			line-height: 13px;
